removing imgs for UI

--- a/content/emails/confirmation.html
+++ b/content/emails/confirmation.html
@@ -204,7 +204,7 @@
                           Confirm your subscription
                         </h1>
                         <p style="padding: 5px 0; margin: 0;">
-                          Hey there - I'm Victor Zhou. Thanks for subscribing to my email newsletter! Please confirm your subscription below.
+                          Hey there - I'm  Gautam. Thanks for subscribing to my email newsletter! Please confirm your subscription below.
                         </p>
                       </td>
                     </tr>
@@ -227,7 +227,7 @@
                         Thank you,
                       </p>
                       <p style="margin: 0">
-                        Victor Zhou
+                        Gautam Tata
                       </p>
                     </td>
                   </tr>
@@ -237,7 +237,7 @@
                         <tr>
                           <td>
                             <p style="padding: 5px 0; margin: 0; font-size: 14px;">
-                              <a href="https://twitter.com/victorczhou" class="theme-link">Twitter</a> | <a href="https://github.com/vzhou842" class="theme-link">Github</a>
+                              <a href="https://twitter.com/gautamtata" class="theme-link">Twitter</a> | <a href="https://github.com/vzhou842" class="theme-link">Github</a>
                             </p>
                           </td>
                         </tr>
