--- a/content/emails/post-notif.html
+++ b/content/emails/post-notif.html
@@ -265,7 +265,7 @@
           <tr>
             <td style="padding: 20px; font-family: sans-serif; font-size: 12px; line-height: 15px; text-align: center; color: #7b7b7b;">
               <webversion style="color: #7b7b7b; text-decoration: underline; font-weight: bold;">View as a Web Page</webversion>
-              <br><br>Gautam tata<br><span class="unstyle-auto-detected-links">620 Veterans Blvd #239, Redwood City, CA, 94063<br></span>
+              <br><br>Gautam tata<br><span class="unstyle-auto-detected-links">Oakland, CA<br></span>
               <br><br>
               <unsubscribe style="color: #7b7b7b; text-decoration: underline;">unsubscribe</unsubscribe> or <a style="color: #7b7b7b;" href="https://gautamtata.com/update-subscription/">update your preferences</a>
             </td>
